@@ -1,10 +1,10 @@
 package com.hospitalcrud.service;
 
-import com.hospitalcrud.dao.repository.MedRecordDAO;
 import com.hospitalcrud.dao.repository.spring.MedRecordRepository;
 import com.hospitalcrud.domain.error.InternalServerErrorException;
 import com.hospitalcrud.domain.model.MedRecordUI;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,13 +19,15 @@ public class MedRecordService {
         this.medicationService = medicationService;
     }
 
+    @Transactional
     public int add(MedRecordUI medRecordUI) {
         List<String> medications = medRecordUI.getMedications();
-        int result = dao.save(medRecordUI.toMedRecord());
         //add medications as well if everything is ok
-        if (result == 1)
-            return medicationService.add(medications, medRecordUI.getId());
-        return 0;
+        int createdId = dao.save(medRecordUI.toMedRecord());
+        if (createdId > -1) {
+            return medicationService.add(medications, createdId);
+        }
+        throw new InternalServerErrorException("Error adding med record, rolling back...");
     }
 
     public void update(MedRecordUI medRecordUI) {
@@ -36,23 +38,24 @@ public class MedRecordService {
 
     public void delete(int medRecordId) {
         medicationService.delete(medRecordId);
-        if (!dao.delete(medRecordId, true)) {
+        if (!dao.delete(medRecordId)) {
             throw new InternalServerErrorException("Error deleting med record");
         }
     }
 
     public List<MedRecordUI> getMedRecords(int patientId) {
-        return dao.get(patientId).stream().map(m -> m.toMedRecordUI(medicationService)).collect(Collectors.toList());
+        return dao.get(patientId).stream().map(m -> m.toMedRecordUI(medicationService)).toList();
     }
 
     public boolean checkPatientMedRecords(int patientId) {
         return dao.get(patientId).isEmpty();
     }
 
+    //no need for this one to be transactional, it is already called in a transactional method and only there
     public void deleteByPatientId(int patientId) {
         dao.getListOfMedRecordsIdsFromPatient(patientId).forEach(id -> {
             medicationService.delete(id);
-            dao.delete(id, true);
+            dao.delete(id);
         });
 
     }
